[gd_scene load_steps=3 format=3 uid="uid://bqj8x7k2m3n4o"]

[ext_resource type="Script" uid="uid://c3hijufw3rkf7" path="res://dialog/DialogBox.gd" id="1_0x8k2"]
[ext_resource type="Texture2D" uid="uid://ba11hwbbug5b8" path="res://assets/ui pack/Tilesheets/Large tiles/Thick outline/tilemap_packed.png" id="2_t1do4"]

[node name="DialogBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8k2")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_t1do4")
region_rect = Rect2(0, 32, 32, 32)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="DialogText" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -436.5
offset_top = 12.0
offset_right = 436.5
offset_bottom = 82.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.22, 0.197267, 0.176, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Hello! This is a dialog box."
fit_content = true

[node name="ContinueButton" type="Button" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -436.5
offset_top = -39.6
offset_right = 436.5
offset_bottom = -11.6
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Continue"
